Fix cross browser issue on firefox

--- a/app/elements/my-app.scss
+++ b/app/elements/my-app.scss
@@ -5,10 +5,10 @@
   display: block;
   height: 100%;
 }
-section {
+.section {
   padding: 20px 68px;
 
-  &:nth-child(odd) {
+  &.dark {
     background:black;
     padding: 20px 68px 70px 68px;
 
